possibly fixed alignment issues, added an image to card container

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -6,9 +6,11 @@ body {
   background-color: #282c34;
   align-items: center;
   justify-content: center;
-  display: inline;
+  /* display: block; */
   text-align: center;
-  padding: 2rem;
+  padding-top: 2rem;
+  padding-left: 4rem;
+  width: 99%;
 }
 
 .App-logo {
@@ -34,24 +36,29 @@ body {
 .card {
   border: 2px solid rgb(137, 137, 185);
   border-radius: 0.5em;
-  height: 200px;
+  height: 350px;
+  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 10px;
+  margin-left: 25%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 #card {
   text-align: center;
   justify-self: center;
   justify-content: center;
-  display: flex;
-  margin: auto;
+  /* display: flex; */
+  /* margin: auto; */
 }
 
 .card-text {
-  padding: 20px;
-  width: 20em;
+  /* padding: 20px;
+  width: 20em; */
+  /* position: absolute; */
   color: white;
 }
 
@@ -60,6 +67,7 @@ body {
   margin-top: 50px;
   align-items: justify;
   align-content: center;
+  justify-content: space-evenly;
   width: 100%;
 }
 
@@ -69,7 +77,12 @@ body {
   color: aqua;
   background-color: rgb(61, 61, 84);
   border-radius: 22px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
+  justify-content: center;
+}
+
+.image {
+  height: 150px;
 }
 
 @keyframes App-logo-spin {
